# esp32-humidity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  blink.c  factory_app_2MB.csv  sdkconfig  sdkconfig.old  tcpserver.py  test.aac
main/: CMakeLists.txt  ble.c  ble.h  ble_driver.c  ble_driver.h  dht20.c  dht20.h  esp32-humidity.c  esp32-humidity.h  main.c  main.h  wifi.c  wifi.h  wifi_driver.c  wifi_driver.h
src/: blink.c
